--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,11 +4,34 @@
   color: #000;
   padding: 0.2em 0;
 }
-
-/* Space out content a bit */
+html,body {
+  height: 100%;
+}
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+    padding: 50px 0 0 0;
+}
+.navbar-toggle {
+    float: left;
+    margin-left: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 0) {
+    .navbar-toggle {
+        display: block; /* force showing the toggle */
+    }
+}
+
+@media (min-width: 992px) {
+    body {
+        padding: 0;
+    }
+
+    .navbar {
+        right: auto;
+        background: none;
+        border: none;
+    }
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -86,4 +109,7 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+#map_canvas {
+  height: 100%;
 }
