--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,22 +15,12 @@ body {
     margin-left: 15px;
     background-color: rgba(0, 0, 0, 0.5);
 }
-
+.navbar-default {
+  background-color: #222;
+}
 @media (min-width: 0) {
     .navbar-toggle {
         display: block; /* force showing the toggle */
-    }
-}
-
-@media (min-width: 992px) {
-    body {
-        padding: 0;
-    }
-
-    .navbar {
-        right: auto;
-        background: none;
-        border: none;
     }
 }
 
