--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,27 +1,33 @@
-.browserupgrade {
+.browser-upgrade {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
 }
-html,body {
+
+html {
   height: 100%;
 }
+
 body {
-    padding: 50px 0 0 0;
+  height: 100%;
+  padding: 50px 0 0 0;
 }
+
 .navbar-toggle {
-    float: left;
-    margin-left: 15px;
-    background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  margin-left: 15px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
+
 .navbar-default {
   background-color: #222;
 }
+
 @media (min-width: 0) {
-    .navbar-toggle {
-        display: block; /* force showing the toggle */
-    }
+  .navbar-toggle {
+    display: block; /* force showing the toggle */
+  }
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -100,6 +106,6 @@ body {
     border-bottom: 0;
   }
 }
-#map_canvas {
+#map-canvas {
   height: 100%;
 }
